--- a/style/dynamic.css
+++ b/style/dynamic.css
@@ -5,8 +5,8 @@
 /* Dropdown Nagivation Menu (hidden by default) */
 nav ul li div.dropdown-menu {
   color: white;
-  background-color: rgb(90, 118, 161);
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  background-color: rgba(90, 118, 161, 0);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   display: flex;
   justify-content: center;
   position: absolute;
@@ -18,35 +18,65 @@ nav ul li div.dropdown-menu {
   z-index: 1;
 }
 
-nav div.row {
+nav .row {
   display: flex;
   width: 70%;
   margin: 0;
   padding: 0;
 }
 
-nav div.row div.col {
+nav .row .col {
   margin-right: 3rem;
 }
 
-nav div.col ul {
+nav .col ul {
   padding: 0;
   list-style-type: none;
 }
 
-nav div.col h3 {
+nav .col h3 {
   margin-bottom: 1rem;
   text-decoration: underline 2px white solid;
 }
 
+@keyframes fade-in {
+  from {
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0);
+    background-color: rgba(90, 118, 161, 0);
+    visibility: hidden;
+  }
 
-nav ul li:hover div.dropdown-menu,
-nav ul li:focus-within div.dropdown-menu {
-  visibility: visible;
+  to {
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    background-color: rgba(90, 118, 161, 1);
+    visibility: visible;
+  }
+}
+
+@keyframes fade-out {
+  from {
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    background-color: rgba(90, 118, 161, 1);
+    visibility: visible;
+  }
+
+  to {
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0);
+    background-color: rgba(90, 118, 161, 0);
+    visibility: hidden;
+  }
+}
+
+.fade-in {
+  animation: fade-in 300ms linear forwards;
+}
+
+.fade-out {
+  animation: fade-out 300ms linear forwards;
 }
 
 nav > ul > li > a:hover,
 nav ul li:hover > a,
 nav ul li:focus-within > a {
-  border-bottom: .5em #648fd0b9 solid;
+  border-bottom: 0.5em #648fd0b9 solid;
 }
