--- a/style/static.css
+++ b/style/static.css
@@ -3,16 +3,18 @@
 /******************************/
 
 /* Using Normalize.css (consistent elements rendering) */
-@import url('https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css');
+@import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css");
 
 /* Import custom fonts (like HelveticaNeueCyr) */
 @import url(./fonts.css);
 
-html, body {
+html,
+body {
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: "HelveticaNeueCyr", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+  font-family: "HelveticaNeueCyr", "HelveticaNeue-Light", "Helvetica Neue Light",
+    "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 }
 
 body {
@@ -34,6 +36,18 @@ footer {
   padding: 1rem 0;
 }
 
+ol,
+ul,
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
 .block-container,
 .about-container,
 .academics-container,
@@ -50,7 +64,7 @@ footer {
 /*                */
 
 .navbar {
-  display:flex;
+  display: flex;
   font-weight: 600;
   justify-content: space-between;
 }
@@ -72,7 +86,7 @@ nav {
 }
 
 nav > ul {
-  display:flex;
+  display: flex;
   margin: 0;
   padding: 0;
   align-items: end;
@@ -90,8 +104,8 @@ nav > ul > li > a {
   height: 70%;
   display: inline-block;
   text-decoration-line: none;
-  color: #2B5593;
-  border-bottom: .5em #fff solid;
+  color: #2b5593;
+  border-bottom: 0.5em #fff solid;
 }
 
 nav > ul > li h3 {
